--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@ scale=1.0"
   </head>
   <body>
     <header>
-      <h1>Page Heading</h1>
+      <h1>Project Home Page for Sammy</h1>
     </header>
     <main>
-      <p>Here is some main content.</p>
+        <p><a href="practice/index.html">Practice Project</a></p>
+        <p><a href="assessment/index.html">Assessment Project</a></p>
     </main>
     <footer>
       <p>&copy; 2024 Your Name. All rights reserved.</p>
