--- a/practice/index.html
+++ b/practice/index.html
@@ -6,14 +6,30 @@
     <title>Page Title</title>
   </head>
   <body>
-    <header>
-      <h1>Pete's practice project page</h1>
-    </header>
-    <main>
-      <p><a href="../index.html">Home</a></p>
-    </main>
-    <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
-  </body>
+  <header>
+    <h1>
+      <a href ="aboutme.html">My Portfolio Site</a>
+    </h1>
+    <nav>
+      <a href ="project1.html">Project 1</a>
+      <a href ="project2.html">Project 2</a>
+      <a href ="project3.html">Project 3</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Hi, I'm Sammy!</h2>
+    <h3>A short description about me and my experience.</h3>
+  <div>
+    <div>
+      <a href="project1.html"><img src="img/Desktop - 2.png" alt="Schooled" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="project2.html"><img src="img/Website2. Mealtime_Title Page.png" alt="Mealtime" style="width:1200px;height:500px;"></a>
+    </div>
+  </div>
+</main>
+  <footer>
+    <p>2024 Your Name. All rights reserved.</p>
+  </footer>
+</body>
 </html>
