--- a/practice/index.html
+++ b/practice/index.html
@@ -21,10 +21,10 @@
     <h3>A short description about me and my experience.</h3>
   <div>
     <div>
-      <a href="project1.html"><img src="img/Desktop - 2.png" alt="Schooled" style="width:1200px;height:500px;"></a>
+      <a href="project1.html"><img src="images/Desktop - 2.png"Schooled" style="width:1200px;height:500px;"></a>
     </div>
     <div>
-      <a href="project2.html"><img src="img/Website2. Mealtime_Title Page.png" alt="Mealtime" style="width:1200px;height:500px;"></a>
+      <a href="project2.html"><img src="images/Website2. Mealtime_Title Page.png" alt="Mealtime" style="width:1200px;height:500px;"></a>
     </div>
   </div>
 </main>
