CSS added to the other folders
Css added to the other folders

--- a/practice/index.html
+++ b/practice/index.html
@@ -22,7 +22,7 @@
     <h3>A short description about me and my experience.</h3>
   <div>
     <div>
-      <a href="project1.html"><img src="images/Desktop - 2.png"Schooled" style="width:1200px;height:500px;"></a>
+      <a href="project1.html"><img src="images/Desktop - 2.png" style="width:1200px;height:500px;"></a>
     </div>
     <div>
       <a href="project2.html"><img src="images/Website2. Mealtime_Title Page.png" alt="Mealtime" style="width:1200px;height:500px;"></a>
