Updates of images and links
Adding more images and updating links

--- a/practice/index.html
+++ b/practice/index.html
@@ -15,28 +15,47 @@
   <body>
   <header>
     <h1>
-      <a href ="aboutme.html">My Portfolio Site</a>
+      <a href ="aboutme.html">Sammy Bugata</a>
     </h1>
     <nav>
-      <a href ="project1.html">Project 1</a>
-      <a href ="project2.html">Project 2</a>
-      <a href ="project3.html">Project 3</a>
+      <a href ="work.html">Work</a>
+      <a href ="aboutme.html">About Me</a>
+      <a href ="contact.html">Contact</a>
     </nav>
   </header>
   <main class="page-container">
-    <h2>Hi, I'm Sammy!</h2>
-    <h3>A short description about me and my experience.</h3>
+    <!-- <h2>Hi, I'm Sammy!</h2>
+    <h3>A short description about me and my experience.</h3> -->
+    <img src="images/untitled 8 - Copy16CHOSEN.png" alt="Intro Image" style="width:1200px;height:800px;">
   <div>
     <div>
-      <a href="project1.html"><img src="images/Desktop - 2.png" style="width:1200px;height:500px;"></a>
+      <a href="Mealtime.html"><img src="images/Website2. Mealtime_Title Page.png" alt="Mealtime mockup" style="width:1200px;height:500px;"></a>
     </div>
     <div>
-      <a href="project2.html"><img src="images/Website2. Mealtime_Title Page.png" alt="Mealtime" style="width:1200px;height:500px;"></a>
+      <a href="Schooled.html"><img src="images/Desktop - 2.png" alt="Schooled mockup" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="GISSport.html"><img src="images/GISSport_HomepageSection.png" alt="GIS Sport mockup" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="Offthehook.html"><img src="images/OffTheHook_HomepageSection.png" alt="Off the Hook render" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="Pacify.html"><img src="images/Pacify+_HomepageSection.png" alt="Pacify + context render" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="Dell.html"><img src="images/Arco_HomepageSection.png" alt="Arco context render" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="Kohler.html"><img src="images/Roi_HomepageSection.png" alt="Roi context render" style="width:1200px;height:500px;"></a>
+    </div>
+    <div>
+      <a href="Clessi.html"><img src="images/Clessi_HomepageSection.png" alt="Clessi context render" style="width:1200px;height:500px;"></a>
     </div>
   </div>
 </main>
   <footer>
-    <p>2024 Your Name. All rights reserved.</p>
+    <p>2024 Sameeksha Bugata. All rights reserved.</p>
   </footer>
 </body>
 </html>
