--- a/practice/index.html
+++ b/practice/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/layout.css">
     <title>Page Title</title>
-    <script src="js/script.js" defer></script>
+    <script type="module" src="js/script.js" defer></script>
   </head>
   <body>
   <header>
