Added vote button
Added vote button

--- a/practice/index.html
+++ b/practice/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/layout.css">
+    <script type="module" src="js/project1script.js" defer></script>
     <title>Page Title</title>
     <script type="module" src="js/script.js" defer></script>
   </head>
