--- a/assessment/events.html
+++ b/assessment/events.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Events</title>
   </head>
   <body>
     <header>
-      <h1>Home</h1>
+      <h1>Events</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
