--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -14,6 +14,10 @@
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
+        <link rel="stylesheet" href="css/base.css"/>
+        <link rel="stylesheet" href="css/components.css"/>
+        <link rel="stylesheet" href="css/css_reset.css"/>
+        <link rel="stylesheet" href="css/layout.css"/>
       </nav>
     </header>
     <main>
