--- a/assessment/index.html
+++ b/assessment/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/css_reset.css"/>
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/components.css"/>
+    <link rel="stylesheet" href="./css/layout.css"/>
     <title>Home</title>
+
   </head>
   <body>
     <header>
@@ -14,10 +22,8 @@
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
-        <link rel="stylesheet" href="css/base.css"/>
-        <link rel="stylesheet" href="css/components.css"/>
-        <link rel="stylesheet" href="css/css_reset.css"/>
-        <link rel="stylesheet" href="css/layout.css"/>
+        
+        <script type="module" src="js/index.js" defer></script>
       </nav>
     </header>
     <main>
