Added javascript and CSS
Changed navigation bar

--- a/assessment/index.html
+++ b/assessment/index.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
+    <script type="module" src="js/index.js" defer></script>
+    <script type="module" src="js/page_load_message.js" defer></script>
     <title>Home</title>
 
   </head>
   <body>
     <header>
       <h1>Home</h1>
-      <nav>
+      <nav id = flexnavbar>
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
-        
-        <script type="module" src="js/index.js" defer></script>
       </nav>
     </header>
     <main>
