--- a/assessment/community.html
+++ b/assessment/community.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/css_reset.css"/>
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/components.css"/>
+    <link rel="stylesheet" href="./css/layout.css"/>
+    <script type="module" src="js/index.js" defer></script>
+    <script type="module" src="js/page_load_message.js" defer></script>
     <title>Community</title>
+
   </head>
   <body>
     <header>
       <h1>Community</h1>
-      <nav>
+      <nav id = flexnavbar>
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
-        <link rel="stylesheet" href="assessment/css/base.css"/>
-        <link rel="stylesheet" href="assessment/css/components.css"/>
-        <link rel="stylesheet" href="assessment/css/css_reset.css"/>
-        <link rel="stylesheet" href="assessment/css/layout.css"/>
       </nav>
     </header>
     <main>
