Updated html files
Added grid container and assigned where they go

--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -15,20 +15,23 @@
     <title>Insights and Recommendations</title>
   </head>
   <body>
-    <header>
-      <h1>Insights and Recommendations</h1>
-      <nav id = flexnavbar>
+    <div id="gridcontainer">
+      <header>
+        <h1>Insights and Recommendations</h1>
+      </header>
+      <nav id = "flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
-    </header>
-    <main>
-    </main>
-    <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
+      <main>
+        This is some test text.
+      </main>
+      <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
