--- a/assessment/index.html
+++ b/assessment/index.html
@@ -13,23 +13,25 @@
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
     <title>Home</title>
-
   </head>
   <body>
-    <header>
-      <h1>Home</h1>
-      <nav id = flexnavbar>
+    <div id="gridcontainer">
+      <header>
+        <h1>Home</h1>
+      </header>
+      <nav id = "flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
-    </header>
-    <main>
-    </main>
-    <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
+      <main>
+        This is some test text.
+      </main>
+      <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
