--- a/assessment/index.html
+++ b/assessment/index.html
@@ -35,7 +35,7 @@
     <script type="module" src="js/page_load_message.js" defer></script>
     <script type="module" src="js/serviceWorker.js" defer></script>
 
-
+    <img  a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png">
     <title>Home</title>
   </head>
   <body>
