--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/layout.css"/>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
+    <img a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png">
     <title>Safety Guides</title>
   </head>
   <body>
