--- a/assessment/community.html
+++ b/assessment/community.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
-    <script type="module" src="./js/index.js" defer></script>
-    <script type="module" src="./js/page_load_message.js" defer></script>
-    <title>Community</title>
+    <script type="module" src="js/index.js" defer></script>
+    <script type="module" src="js/page_load_message.js" defer></script>
+    <script type="module" src="js/serviceWorker.js" defer></script>
+
+    <!-- <img  a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png"> -->
+    <title>Home</title>
   </head>
   <body>
     <header>
