--- a/assessment/events.html
+++ b/assessment/events.html
@@ -10,29 +10,85 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
-    <script type="module" src="js/index.js" defer></script>
-    <script type="module" src="js/page_load_message.js" defer></script>
-    <img  a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png">
+    <script type="module" src="./js/index.js" defer></script>
+    <script type="module" src="./js/page_load_message.js" defer></script>
     <title>Events</title>
   </head>
   <body>
-    <div id="gridcontainer">
-      <header>
-        <h1>Events</h1>
-      </header>
-      <nav id = "flexnavbar">
-        <a href="index.html">Home</a>
-        <a href="safetyguides.html">Safety Guides</a>
-        <a href="events.html">Events</a>
-        <a href="community.html">Community</a>
-        <a href="insights_recommendations.html">Insights and Recommendations</a>
+    <header>
+      <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+      <nav>
+        <ul class="nav_links">
+          <li><a class ="active" href="index.html">Home</a></li>
+          <li><a href="safetyguides.html">Safety Guides</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="community.html">Community</a></li>
+          <li><a href="insights_recommendations.html">Insights and Recommendations</a></li>
+        </ul>
       </nav>
+      <a class = "cta" href ="#"><button>Contact</button></a>
+    </header>
+
+    <div>
       <main>
-        This is some test text.
+        <div id="nav_buttons">
+          <button type="button">Community</button>
+          <button type="button">Discussion Board</button>
+          <button type="button">Notifications</button>
+        </div>
+        <div>
+          <h2>Your communities</h2>
+        </div>
+        <!-- Slideshow container -->
+        <div id="events-slideshow" class="slideshow-container">
+
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+              <img src="./images/Carnival_Brazil.png" style="width:100%;">
+              <div class="text">Carnival</div>
+          </div>
+          <div class="mySlides fade">
+            <img src="./images/DJ_Night.png" style="width:100%;">
+            <div class="text">DJ Night</div>
+          </div>
+          <div class="mySlides fade">
+              <img src="./images/Music_Festival.png" style="width: 100%;">
+              <div class="text">Music Festival</div>
+          </div>
+          <div class="mySlides fade">
+            <img src="./images/Night_Club.png" style="width:100%;">
+              <div class="text">Night Club</div>
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:left">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+        <!-- <div class="carousel-container">
+          <div class="carousel">
+              <img class="carousel-image" src="./images/Carnival_Brazil.png" alt="Carnival">
+              <img class="carousel-image" src="./images/DJ_Night.png" alt="DJ Night">
+              <img class="carousel-image" src="./images/Music_Festival.png" alt="Music Festival">
+              <img class="carousel-image" src="./images/Night_Club.png" alt="Night Club">
+          </div>
+          <button class="nav prev" onclick="changeSlide(-1)">&#10094;</button>
+          <button class="nav next" onclick="changeSlide(1)">&#10095;</button>
+        </div> -->
       </main>
-      <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-      </footer>
+      <script src="script.js"></script>
     </div>
+  This is some test text.
+  <footer>
+    <p>&copy; 2024 Your Name. All rights reserved.</p>
+  </footer>
   </body>
 </html>
