--- a/assessment/index.html
+++ b/assessment/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- link the manifest file -->
-    <link rel="manifest" href="js/manifest.json">
+
+    <!-- Link to manifest file -->
+    <link rel="manifest" href="./js/manifest.json">
     <meta name="theme-color" content="#ABD451">
     <!-- only needed if you have an apple phone -->
-    <link rel="apple-touch-icon" sizes="192x192" href="/icons/frame_67.png">
+    <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png">
 
 
     <!-- service worker registration -->
@@ -21,8 +22,8 @@
             .catch((error) => {
               console.log('Service Worker registration failed: ', error);
             });
-      });
-    }
+        });
+      }
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,13 +36,25 @@
     <script type="module" src="js/page_load_message.js" defer></script>
     <script type="module" src="js/serviceWorker.js" defer></script>
 
-    <img  a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png">
+    <!-- <a href="index.html">
+      <img id="logo" src="/DECO7140/assessment/icons/Frame 66.png" alt="Logo">
+    </a>  -->
     <title>Home</title>
   </head>
   <body>
     <div id="gridcontainer">
       <header>
-        <h1>Home</h1>
+        <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+        <!-- <nav>
+          <ul class="nav_links">
+            <li><a class ="active" href="index.html">Home</a></li>
+            <li><a href="safetyguides.html">Safety Guides</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community</a></li>
+            <li><a href="insights_recommendations.html">Insights and Recommendations</a></li>
+          </ul>
+        </nav> -->
+        <a class = "cta" href ="#"><button>Contact</button></a>
       </header>
       <nav id = "flexnavbar">
         <a href="index.html">Home</a>
@@ -51,6 +64,9 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
       <main>
+        <div>
+          <h2>Home</h2>
+        </div>
         This is some test text.
       </main>
       <footer>
