HTML and CSS for Events Page
Updating the events page with HTML and CSS. Setting up the slideshow on the page and the search input. Styled them using CSS.

--- a/assessment/events.html
+++ b/assessment/events.html
@@ -28,16 +28,20 @@
       </nav>
       <a class = "cta" href ="#"><button>Contact</button></a>
     </header>
-
     <div>
       <main>
-        <div id="nav_buttons">
-          <button type="button">Community</button>
-          <button type="button">Discussion Board</button>
-          <button type="button">Notifications</button>
+        <div class="topnav">
+          <input type="text" placeholder="Search..." aria-label="Search">
+          <button type="submit">Search</button>
         </div>
         <div>
-          <h2>Your communities</h2>
+          <h2>Today</h2>
+        </div>
+        <div id="nav_buttons">
+          <button type="button">Events</button>
+          <button type="button">Adventure</button>
+          <button type="button">Sightseeing</button>
+          <button type="button">Sport</button>
         </div>
         <!-- Slideshow container -->
         <div id="events-slideshow" class="slideshow-container">
