--- a/assessment/index.html
+++ b/assessment/index.html
@@ -44,8 +44,8 @@
   <body>
     <div id="gridcontainer">
       <header>
-        <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
-        <!-- <nav>
+        <img class = "logo" src="/DECO7140/assessment/icons/Frame 66.png" alt="logo">
+        <nav>
           <ul class="nav_links">
             <li><a class ="active" href="index.html">Home</a></li>
             <li><a href="safetyguides.html">Safety Guides</a></li>
@@ -53,16 +53,9 @@
             <li><a href="community.html">Community</a></li>
             <li><a href="insights_recommendations.html">Insights and Recommendations</a></li>
           </ul>
-        </nav> -->
+        </nav>
         <a class = "cta" href ="#"><button>Contact</button></a>
       </header>
-      <nav id = "flexnavbar">
-        <a href="index.html">Home</a>
-        <a href="safetyguides.html">Safety Guides</a>
-        <a href="events.html">Events</a>
-        <a href="community.html">Community</a>
-        <a href="insights_recommendations.html">Insights and Recommendations</a>
-      </nav>
       <main>
         <div>
           <h2>Home</h2>
