--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -12,21 +12,23 @@
     <link rel="stylesheet" href="./css/layout.css"/>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
-    <img  a href = index.html id = "logo" src="/DECO7140/assessment/icons/Frame 66.png">
     <title>Insights and Recommendations</title>
   </head>
   <body>
     <div id="gridcontainer">
       <header>
-        <h1>Insights and Recommendations</h1>
-      </header>
-      <nav id = "flexnavbar">
-        <a href="index.html">Home</a>
-        <a href="safetyguides.html">Safety Guides</a>
-        <a href="events.html">Events</a>
-        <a href="community.html">Community</a>
-        <a href="insights_recommendations.html">Insights and Recommendations</a>
-      </nav>
+        <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+        <nav>
+          <ul class="nav_links">
+            <li><a class ="active" href="index.html">Home</a></li>
+            <li><a href="safetyguides.html">Safety Guides</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="community.html">Community</a></li>
+            <li><a href="insights_recommendations.html">Insights and Recommendations</a></li>
+          </ul>
+        </nav>
+        <a class = "cta" href ="#"><button>Contact</button></a>
+     </header>
       <main>
         This is some test text.
       </main>
