--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Information about webpage that helps browsers and search engines understand the page better.-->
   <head>
+    <!--Charset - character encoding that doc will use-->
+    <!--UTF-8 - Capable of encoding all possible characters in Unicode(standardized system for encoding  and representing text in devices) so good for international use-->
     <meta charset="UTF-8" />
+    <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Preconnect informs browser to establish early connections to the specified origin.-->
+    <!--<link> used for external resources such as, stylesheets (CSS), icons, and other files and not clickable.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--Cross-origin - Browser will make the request to href without including any credentials (like cookies or HTTP authentication)-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Link external resources to webpage, specifies font family, styles of font to load, normal (0) or italic (1), font to show while Poppins loads, relationship with resource is a stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
+    <!--hypertext reference attribute specifies URL (Uniform Resource Locator) of the resource you want to link to.--> 
+    <!--Stylesheet, which contains CSS rules for styling in the same directory as this HTML file-->
     <link rel="stylesheet" href="./css/css_reset.css"/>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
+
+    <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
+    <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
+
+    <!-- Appears in the browser tab and is used by search engines.-->
     <title>Insights and Recommendations</title>
   </head>
   <body>
     <div id="gridcontainer">
       <header>
+        <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
         <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
-        <nav>
-          <ul class="nav_links">
-            <li><a class ="active" href="index.html">Home</a></li>
-            <li><a href="safetyguides.html">Safety Guides</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="community.html">Community</a></li>
-            <li><a href="insights_recommendations.html">Insights and Recommendations</a></li>
-          </ul>
+        <nav id="flexnavbar" class="nav_links">
+          <a href="index.html">Home</a>
+          <a href="safetyguides.html">Safety Guides</a>
+          <a href="events.html">Events</a>
+          <a href="community.html">Community</a>
+          <a class="active" href="insights_recommendations.html">Insights and Recommendations</a>
         </nav>
+
+        <!--Type = button - Does not have any default behavior like submitting a form.-->
         <a class = "cta" href ="#"><button>Contact</button></a>
      </header>
       <main>
         This is some test text.
       </main>
       <footer>
+        <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
       </footer>
     </div>
