Updates to event and community page
Added discussion board and search functionality

--- a/assessment/community.html
+++ b/assessment/community.html
@@ -104,6 +104,21 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
+
+          <section class="discussion-form">
+            <h2>Post a New Discussion</h2>
+            <form id="postForm">
+                <textarea id="postContent" placeholder="What's on your mind?" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <section class="posts">
+            <h2>Recent Posts</h2>
+        </section>
+        <div id="postFeed"></div>
+
+        
       </main>
       <footer>
         <!-- &copy is unicode equivalent for copyright symbol (©)-->
