--- a/assessment/events.html
+++ b/assessment/events.html
@@ -46,6 +46,10 @@
     </header>
     <div>
       <main>
+        <div class="topnav">
+          <input type="text" placeholder="Search..." aria-label="Search">
+          <button type="submit">Search</button>
+        </div>
         <div>
           <h2>Today</h2>
         </div>
