--- a/assessment/community.html
+++ b/assessment/community.html
@@ -35,7 +35,7 @@
   <body>
     <header>
       <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
-      <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+      <img class = "logo" a href = "index.html" src="./icons/Frame 68.png">
       <nav id="flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
@@ -47,11 +47,11 @@
     </header>
     <div>
       <main>
-        <div id="nav_buttons">
+        <div class="nav_buttons">
           <!--Type = button - Does not have any default behavior like submitting a form.-->
-          <button type="button">Community</button>
-          <button type="button">Discussion Board</button>
-          <button type="button">Notifications</button>
+          <button type="button" class="navigation-button">Community</button>
+          <button type="button" class="navigation-button">Discussion Board</button>
+          <button type="button" class="navigation-button">Notifications</button>
         </div>
         <div>
           <h2>Your communities</h2>
