--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -35,7 +35,7 @@
     <div id="gridcontainer">
       <header>
         <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
-        <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+        <img class = "logo" a href = "index.html" src="./icons/Frame 68.png">
         <nav id="flexnavbar" class="nav_links">
           <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
@@ -48,6 +48,110 @@
         <a class = "cta" href ="#"><button>Contact</button></a>
      </header>
       <main>
+        <div class="top-content-recomspage">
+          <div class="topnav">
+            <input type="text" placeholder="Search..." aria-label="Search">
+            <button type="submit">Search</button>
+          </div>
+          <div class="nav_buttons">
+            <!--Type = button - Does not have any default behavior like submitting a form.-->
+            <button type="button" class="navigation-button">Articles</button>
+            <button type="button" class="navigation-button">Recommendations</button>
+            <button type="button" class="navigation-button">Tips</button>
+          </div>
+        </div>
+
+
+        <h2>Traveller’s favourites</h2>
+        <div class="nav_buttons">
+          <!--Type = button - Does not have any default behavior like submitting a form.-->
+          <button type="button" class="navigation-button">Places</button>
+          <button type="button" class="navigation-button">Explore</button>
+          <button type="button" class="navigation-button">Food & Drink</button>
+          <button type="button" class="navigation-button">Safety</button>
+        </div>
+        <!-- First Slideshow -->
+        <div class="new-slideshow-container">
+          <div class="mySlides">
+            <div class="new-slide-container">
+              <div class="new-image-container">
+                <img src="./images/Carnival_Brazil.png" alt="Carnival Brazil">
+                <div class="new-text">
+                  <h2>Top 5 in Nightlife</h2>
+                  <p>The top 5 clubs in Rio for all kinds of people.</p>
+                </div>
+              </div>
+              <div class="new-image-container">
+                <img src="./images/DJ_Night.png" alt="DJ Night">
+                <div class="new-text">
+                  <h2>Hidden Gems</h2>
+                  <p>6 hidden gems for photography lovers!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mySlides">
+            <div class="new-slide-container">
+              <div class="new-image-container">
+                <img src="./images/Music_Festival.png" alt="Music Festival">
+                <div class="new-text">Music Festival</div>
+              </div>
+              <div class="new-image-container">
+                <img src="./images/Night_Club.png" alt="Night Club">
+                <div class="new-text">Night Club</div>
+              </div>
+            </div>
+          </div>
+          <a class="new-prev" onclick="slideshow1.plusSlides(-1)">&#10094;</a>
+          <a class="new-next" onclick="slideshow1.plusSlides(1)">&#10095;</a>
+        </div>
+
+        <h2>Essentials</h2>
+        <div class="nav_buttons">
+          <!--Type = button - Does not have any default behavior like submitting a form.-->
+          <button type="button" class="navigation-button">To do</button>
+          <button type="button" class="navigation-button">Accomodation</button>
+          <button type="button" class="navigation-button">Visa</button>
+          <button type="button" class="navigation-button">Safety</button>
+        </div>
+
+        <!-- Second Slideshow -->
+        <div class="new-slideshow-container">
+          <div class="mySlides">
+            <div class="new-slide-container">
+              <div class="new-image-container">
+                <img src="./images/Carnival_Brazil.png" alt="Carnival Brazil">
+                <div class="new-text">
+                  <h2>Top 5 in Nightlife</h2>
+                  <p>The top 5 clubs in Rio for all kinds of people.</p>
+                </div>
+              </div>
+              <div class="new-image-container">
+                <img src="./images/DJ_Night.png" alt="DJ Night">
+                <div class="new-text">
+                  <h2>Hidden Gems</h2>
+                  <p>6 hidden gems for photography lovers!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mySlides">
+            <div class="new-slide-container">
+              <div class="new-image-container">
+                <img src="./images/Music_Festival.png" alt="Music Festival">
+                <div class="new-text">Music Festival</div>
+              </div>
+              <div class="new-image-container">
+                <img src="./images/Night_Club.png" alt="Night Club">
+                <div class="new-text">Night Club</div>
+              </div>
+            </div>
+          </div>
+          <a class="new-prev" onclick="slideshow2.plusSlides(-1)">&#10094;</a>
+          <a class="new-next" onclick="slideshow2.plusSlides(1)">&#10095;</a>
+        </div>
+
+
         This is some test text.
       </main>
       <footer>
