--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -35,7 +35,7 @@
     <div id="gridcontainer">
       <header>
         <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
-        <img class = "logo" a href = "index.html" src="/DECO7140/assessment/icons/Frame 66.png">
+        <img class = "logo" a href = "index.html" src="./icons/Frame 68.png">
         <nav id="flexnavbar">
           <a href="index.html">Home</a>
           <a class="active" href="safetyguides.html">Safety Guides</a>
